<resources>
    <string name="app_name">calmOmatic</string>
    <string name="stringHarpMusic">Harp Music</string>
    <string name="stringPianoMusic">Piano Music</string>
    <string name="stringPianoMusic2">Piano Music Two</string>
    <string name="stringSoftPiano">Soft Piano</string>
    <string name="stringRelaxingMusic">Relaxing Music</string>
    <string name="stringTuneMusic">Tune Music</string>

    <string name="txtAutism">We used Autism AI(available on Google Playstore) as an inspiration for calmOmatic. Addressing mental health is very important hence the development of calmOmatic, a great gaming experience coated with stress relief tips and quotes. We hope this is an enjoyable experience for you all. \n " <a href="http://play.google.com/store/apps/details?id=com.rezanet.intelligentasdscreener">https://play.google.com/store/apps/details?id=com.rezanet.intelligentasdscreener</a></string>


</resources>
